--- a/app/globals.css
+++ b/app/globals.css
@@ -92,6 +92,15 @@
 }
 
 @layer utilities {
+  /* Pagination */
+  .pagination-btn {
+    @apply bg-white text-black font-medium px-4 py-2 rounded disabled:opacity-50 disabled:cursor-not-allowed;
+  }
+
+  .pagination-current {
+    @apply bg-primary-500 text-gray-700 font-semibold px-4 py-2 rounded;
+  }
+
   .css-invert {
     @apply invert-[50%] brightness-200;
   }
